update example data

--- a/exampleSite/data/contact.yaml
+++ b/exampleSite/data/contact.yaml
@@ -1,4 +1,4 @@
-email: 'themes@zerostatic.io'
-phone: 'XXX XXX XXX'
+email: 'zerostaticthemes@gmail.com'
+phone: 'XXXX XXX XXX'
 businessName: 'Hugo Serif'
 address: ''
