update theme.toml as per hugoThemes guidelines

--- a/theme.toml
+++ b/theme.toml
@@ -1,13 +1,12 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
-name = "hugo-serif-theme"
+name = "Serif"
+license = "MIT"
+licenselink = "https://github.com/JugglerX/hugo-serif-theme/blob/master/LICENSE"
 description = "Serif is a beautiful small business theme for Hugo. It contains content types for the archetypical small business website. The theme is fully responsive, blazing fast and artfully illustrated."
 homepage = "https://github.com/jugglerx/hugo-serif-theme"
-tags = ["responsive","minimal","business","bootstrap"]
+tags = ["responsive","minimal","business","company","bootstrap"]
 features = ["services","team","testimonials"]
 min_version = 0.51
 
 [author]
   name = "Robert Austin"
-  homepage = "https://www.jugglerdigital.com"
+  homepage = "https://www.zerostatic.io"
