--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,10 +1,10 @@
-baseURL = "/"
+baseURL = "www.example.com"
 languageCode = "en-us"
 title = "Hugo Serif Theme"
 theme = "hugo-serif-theme"
 
 [params]
-    google_analytics_id="UA-130251315-2"
+    google_analytics_id=""
 
 [[menu.main]]
 	name = "Services"
