make theme deployable to netlify from exampleSite

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,6 +1,7 @@
 baseURL = "www.example.com"
 languageCode = "en-us"
 title = "Hugo Serif Theme"
+themesDir = "../.."
 theme = "hugo-serif-theme"
 
 [params]
