--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -10,6 +10,7 @@ theme = "hugo-serif-theme"
   [params.logo]
     mobile = "/images/logo-mobile.svg"
     standard  = "/images/logo.svg"
+    alt = "Serif - A Hugo Business Theme"
 
   [params.homepage_meta_tags]
     meta_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
