modeling config file

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -25,24 +25,25 @@ theme = "hugo-serif-theme"
     meta_twitter_site = "@zerostaticio"
     meta_twitter_creator = "@zerostaticio"
 
-# Main Menu
-[[menu.main]]
-	name = "Services"
-	url = "/services/"
-    weight = 1
+[menu]
+  # Main Menu
+  [[menu.main]]
+    name = "Services"
+    url = "/services/"
+      weight = 1
 
-[[menu.main]]
-    name = "Team"
-    url = "/team/"
-    weight = 2
+  [[menu.main]]
+      name = "Team"
+      url = "/team/"
+      weight = 2
 
-# Footer Menu
-[[menu.footer]]
-	name = "Home"
-	url = "/"
-    weight = 1
+  # Footer Menu
+  [[menu.footer]]
+    name = "Home"
+    url = "/"
+      weight = 1
 
-[[menu.footer]]
-	name = "Contact"
-	url = "/contact/"
-    weight = 2
+  [[menu.footer]]
+    name = "Contact"
+    url = "/contact/"
+      weight = 2
