--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -10,8 +10,8 @@ theme = "hugo-serif-theme"
   google_tag_manager_id = ""
 
   [params.logo]
-    mobile = "/images/logo-mobile.svg"
-    standard  = "/images/logo.svg"
+    mobile = "images/logo-mobile.svg"
+    standard  = "images/logo.svg"
     alt = "Serif - A Hugo Business Theme"
 
   [params.homepage_meta_tags]
