--- a/theme.toml
+++ b/theme.toml
@@ -1,4 +1,4 @@
-name = "Serif"
+name = "Hugo Serif"
 license = "MIT"
 licenselink = "https://github.com/JugglerX/hugo-serif-theme/blob/master/LICENSE"
 description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
