add github logo, remove header block

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -19,12 +19,15 @@ theme = "hugo-serif-theme"
     meta_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
     meta_og_title = "Hugo Serif Theme"
     meta_og_type = "website"
-    meta_og_url = "https://hugo-serif.netlify.com"
+    meta_og_url = "https://hugo-serif.netlify.app"
     meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-serif-theme/master/images/tn.png"
     meta_og_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
     meta_twitter_card = "summary"
     meta_twitter_site = "@zerostaticio"
     meta_twitter_creator = "@zerostaticio"
+
+  [params.header]
+    github_link = "https://github.com/JugglerX/hugo-serif-theme"
 
 [menu]
   # Main Menu
