--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -1,5 +1,5 @@
-stackbitVersion: ~0.3.0
-ssgName: hugo
+stackbitVersion: ~0.2.39
+ssgName: custom
 publishDir: exampleSite/public
 buildCommand: cd exampleSite && hugo --gc --baseURL "/" --themesDir ../.. && cd ..
 uploadDir: images
