clean up images

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -13,8 +13,8 @@ theme = "hugo-serif-theme"
     show_call_box = true
 
   [params.logo]
-    mobile = "images/logo-mobile.svg"
-    desktop = "images/logo.svg"
+    mobile = "images/logo/logo-mobile.svg"
+    desktop = "images/logo/logo.svg"
     desktop_height = "36px"
     alt = "Serif - A Hugo Business Theme"
 
