--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -7,8 +7,11 @@ uploadDir: images
 staticDir: static
 pagesDir: content
 dataDir: data
-pageLayoutKey: model
-
+pageLayoutKey: null
+logicFields:
+  - config.params.team.summary_large_truncate
+  - config.params.baseURL
+  - service.weight
 models:
   config:
     type: config
@@ -185,7 +188,6 @@ models:
     file: _index.md
     hideContent: false
     singleInstance: true
-    layout: home
     fields:
       - type: string
         name: title
@@ -210,7 +212,6 @@ models:
     file: 404/_index.md
     hideContent: true
     singleInstance: true
-    layout: pagenotfound
     fields:
       - type: string
         name: title
@@ -221,32 +222,6 @@ models:
     label: Basic Page
     match: '*.md'
     exclude: _index.md
-    layout: basicpage
-    fields:
-      - type: string
-        name: title
-        label: Title
-        description: The title of the page.
-      - type: date
-        name: date
-        label: Date
-      - type: string
-        name: layout
-        label: layout
-      - type: enum
-        name: menu
-        label: Menu
-        options:
-          - label: Main Menu
-            value: main
-          - label: Footer Menu
-            value: footer
-  contact:
-    type: page
-    label: Contact Page
-    file: 'contact.md'
-    singleInstance: true
-    layout: contact
     fields:
       - type: string
         name: title
@@ -270,8 +245,6 @@ models:
     type: page
     label: Service
     folder: services
-    exclude: _index.md
-    layout: service
     fields:
       - type: string
         name: title
@@ -293,7 +266,6 @@ models:
     label: Services Overview
     file: services/_index.md
     singleInstance: true
-    layout: services
     fields:
       - type: string
         name: title
@@ -316,8 +288,6 @@ models:
     type: page
     label: Team
     folder: team
-    exclude: _index.md
-    layout: team
     fields:
       - type: string
         name: title
@@ -354,7 +324,6 @@ models:
     label: Team Overview
     file: team/_index.md
     singleInstance: true
-    layout: teams
     fields:
       - type: string
         name: title
