--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,6 +1,8 @@
 baseURL = "www.example.com"
 languageCode = "en-us"
 title = "Hugo Serif Theme"
+themesDir = "../.."
+theme = "hugo-serif-theme"
 
 [params]
   # In most cases you will only want to use either one of these. If you have Google Analytics included in your GTM tags don't put your GA ID here. Otherwise your data might be useless.
