improve google fonts, meta tags and readme docs

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -20,14 +20,7 @@ theme = "hugo-serif-theme"
     desktop_height = "36px"
     alt = "Serif - A Hugo Business Theme"
 
-  [params.homepage_meta_tags]
-    meta_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
-    meta_og_title = "Hugo Serif Theme"
-    meta_og_type = "website"
-    meta_og_url = "https://hugo-serif.netlify.app"
-    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-serif-theme/master/images/tn.png"
-    meta_og_description = "Serif is a modern business theme for Hugo. It contains content types for the archetypical business website. The theme is fully responsive, blazing fast and artfully illustrated."
-    meta_twitter_card = "summary"
+  [params.seo]
     meta_twitter_site = "@zerostaticio"
     meta_twitter_creator = "@zerostaticio"
 
