try to fix build

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -15,8 +15,8 @@ title = "Hugo Serif Theme"
   google_tag_manager_id = ""
 
   [params.homepage]
-    show_contact_box = true     # show / hide the contaxt box on the homepage
-    show_services_button = true # show / hide the "view all services" button
+    show_contact_box = true      # show / hide the contaxt box on the homepage
+    show_services_button = false # show / hide the "view all services" button
 
   [params.logo]
     mobile = "images/logo/logo-mobile.svg"
